# kitti-rosbag-creator

./: .gitignore  README.md  kitti.rviz  pyproject.toml  requirements.txt  setup.cfg
creator/: __main__.py  creator.py
src/kitti_rosbag2/: creator.py
src/kitti_rosbag_utils/: creator.py  data.py  messages.py  transforms.py  writers.py
