[metadata]
name = kitti-rosbag2
version = 0.0.1
license = MIT
description = ROS2 rosbag tools for the kitti dataset
long_description = README.rst
author = Andrew Presland
author_email = contact@presland.io

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   "setuptools"
   "pykitti"

[options.packages.find]
where=src