[metadata]
name = kitti_rosbag_utils
version = 0.0.1
license = MIT
description = ROS2 rosbag utils for the kitti dataset
long_description = README.rst
author = Andrew Presland
author_email = contact@presland.io

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    kitti_rosbag=kitti_rosbag_utils.__main__:main